# hs-ed25519

./: .gitignore  .travis.yml  AUTHORS.txt  CHANGELOG.md  CONTRIBUTING.md  HLint.hs  LICENSE.txt  README.md  appveyor.yml  cabal.haskell-ci  ed25519.cabal  haskell-ci-disable-test-hlint.patch  nix-shell  stack.yaml
.github/workflows/: haskell-ci.yml
benchmarks/: bench1.hs
scripts/: stats
src/Crypto/Sign/: Ed25519.hs
src/cbits/: crypto_verify.c  fe_0.c  fe_add.c  fe_cmov.c  fe_frombytes.c  fe_isnonzero.c  fe_sq.c  fe_sq2.c  ge_frombytes.c  ge_madd.c  ge_p1p1_to_p2.c  ge_p1p1_to_p3.c  ge_p2_dbl.c  ge_p3_0.c  ge_p3_dbl.c  ge_p3_to_cached.c  ge_p3_tobytes.c  ge_precomp_0.c  ge_scalarmult_base.c  ge_sub.c  keypair.c  open.c  randombytes.c  sc_muladd.c  sc_reduce.c  sha512.c  sign.c  test.c
src/cbits/include/: crypto_int16.h  crypto_int8.h  crypto_uint16.h  crypto_uint32.h  crypto_uint64.h  crypto_verify.h  ed25519.h  ge.h  load.h  randombytes.h  sc.h  sha512.h
src/cbits/ref10/: crypto_verify.c  ed25519.c  fe_1.c  fe_copy.c  fe_isnegative.c  fe_mul.c  fe_neg.c  fe_pow22523.c  fe_sub.c  fe_tobytes.c  ge_add.c  ge_double_scalarmult.c  ge_msub.c  ge_p2_0.c  ge_p3_to_p2.c  ge_scalarmult_base.c  ge_tobytes.c  sc_muladd.c  sign.c  test.c
src/cbits/ref10/include/: crypto_int64.h  crypto_uint8.h  crypto_verify.h  ed25519.h  fe.h
tests/: doctests.hs  hlint.hs  hunit.hs  properties.hs
tests/libsodium-smoke/: blob  blob.sig  default.nix  foo.pk  foo.sk  generate.ghci  readme.md  smoke.c
