name:                ed25519
version:             0.0.3.0
category:            Cryptography
license:             MIT
synopsis:            ed25519 cryptographic signatures
homepage:            http://thoughtpolice.github.com/hs-ed25519
bug-reports:         http://github.com/thoughtpolice/hs-ed25519/issues
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2013-2015
author:              Austin Seipp
maintainer:          Austin Seipp <aseipp@pobox.com>
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 6.12.3,
                     GHC == 7.0.1, GHC == 7.0.2, GHC == 7.0.3, GHC == 7.0.4,
                     GHC == 7.2.1, GHC == 7.2.2, GHC == 7.4.1, GHC == 7.4.2,
                     GHC == 7.6.1, GHC == 7.6.2, GHC == 7.6.3,
                     GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4,
                     GHC == 7.10.1, GHC == 7.10.2

description:
  This package provides a simple, portable implementation of the
  ed25519 public-key signature system. It also includes support for
  detached signatures.
  .
  The underlying implementation uses the @ref10@ implementation of
  ed25519 from SUPERCOP, and should be relatively fast.
  .
  For more information (including how to get a copy of the software)
  visit <http://ed25519.cr.yp.to>.

extra-source-files:
  .travis.yml
  AUTHORS.txt
  README.md
  CONTRIBUTING.md
  CHANGELOG.md
  src/cbits/*.c
  src/cbits/include/*.h

source-repository head
  type: git
  location: https://github.com/thoughtpolice/hs-ed25519.git

-------------------------------------------------------------------------------
-- Flags

flag test-properties
  default: True
  manual: True

flag test-hlint
  default: True
  manual: True

-------------------------------------------------------------------------------
-- Build pt 1: main project

library
  build-depends:
    ghc-prim    >= 0.1 && < 0.5,
    base        >= 4   && < 5,
    bytestring  >= 0.9 && < 0.11

  exposed-modules:
    Crypto.Sign.Ed25519

  ghc-options:        -Wall -fwarn-tabs
  default-language:   Haskell2010
  hs-source-dirs:     src
  c-sources:          src/cbits/ed25519.c
  include-dirs:       src/cbits src/cbits/include

-------------------------------------------------------------------------------
-- Build pt 2: Tests

test-suite properties
  type: exitcode-stdio-1.0
  main-is: properties.hs
  ghc-options: -w
  hs-source-dirs: tests
  default-language:   Haskell2010

  if !flag(test-properties)
    buildable: False
  else
    build-depends:
      base        >= 4   && < 5,
      bytestring  >= 0.9 && < 0.11,
      QuickCheck  >= 2.4 && < 2.9,
      ed25519

--
-- Style/doc tests below
--

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  ghc-options: -w
  hs-source-dirs: tests
  default-language:   Haskell2010

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base  >= 4   && < 5,
      hlint >= 1.7 && < 1.10

-------------------------------------------------------------------------------
-- Build pt 3: benchmarks

benchmark bench1
  type:               exitcode-stdio-1.0
  build-depends:
      base        >= 4   && < 5,
      bytestring  >= 0.9 && < 0.11,
      criterion   >= 0.8 && < 1.2,
      deepseq     >= 1.3 && < 1.5,
      ed25519

  default-language:   Haskell2010
  hs-source-dirs:     benchmarks
  main-is:            bench1.hs
